package com.auction.core.dto.bid;

public class PlaceBid {
    private int auctionId;
    private int bidderId;
    private double amount;
    public PlaceBid() {}
    public PlaceBid(int auctionId, int bidderId, double amount) {
        this.auctionId = auctionId;
        this.bidderId = bidderId;
        this.amount = amount;
    }
    public int getAuctionId() {return auctionId;}
    public void setAuctionId(int auctionId) {this.auctionId = auctionId;}

    public int getBidderId() {return bidderId;}
    public void setBidderId(int bidderId) {this.bidderId = bidderId;}

    public double getAmount() {return amount;}
    public void setAmount(double amount) {this.amount = amount;}
}

