package com.auction.core.dto.user;

public class UpdatePasswordRequest {
    private int userId;
    private String oldPassword;
    private String newPassword;
    public UpdatePasswordRequest(int userId, String oldPassword, String newPassword) {
        this.userId = userId;
        this.oldPassword = oldPassword;
        this.newPassword = newPassword;
    }
    public int getUserId() {return userId;}
    public void setUserId(int userId) {this.userId = userId;}
    
    public String getOldPassword() {return oldPassword;}
    public void setOldPassword(String oldPassword) {this.oldPassword = oldPassword;}

    public String getNewPassword() {return newPassword;}
    public void setNewPassword(String newPassword) {this.newPassword = newPassword;}
    
}
