package com.auction.core.dto.user;

public class UserInformationReques {
    
}

